$Id$

1.4.5 TBD

* use embedded images for show/hide toggle buttons (thanks to matt perry)
* ensure graph controls float above other elements
* zoom when zoom rectangle drags to right or left
* added hourly interval
* generate text and html readme files from README.pod (thanks to matt perrry)
* fix map rule for PROCS (thanks to matt perry)
* increase variety of colors (thanks to matt perry)
* improved controls layout (thanks to matt perry)
* block right-click menu on graphs (thanks to matt perry)
* fixed escaping of urls
* isolate date/time formatting for graph mouseovers
* include pid when logging to help isolate multi-core/multi-thread issues.
* fixed debian6 packaging problems.
* change authentication behavior when nagios default_user_name is defined.
   behavior is now aligned to that defined in nagios.
* use more precise values for graph zoom bounds.
* specify explicitly the default graph height.
* strip leading and trailing whitespace from tuples (heartbeats, stepsizes,
   resolutions, steps, xffs, plotasLINE1, plotasLINE2, etc).
* added fixedscale as a per host/service/database/source parameter.  for
   backward compatibility it still works when specified as a cgi argument.
   note that it affects the vertical axis and the values in the legend.
* handle # in database and data source names
* ensure the directory containing perfdata log is writeable by nagios user.
* added export.cgi to dump rrd data in csv or xml format.
* automatically determine groups from the Nagios servicegroup definitions.
* fixed heartbeats/stepsizes/resolutions bug.  this time for real.  really.
* retain a copy of any modifications made to nagios.cfg and commands.cfg when
   removing rpm or deb packages.
* fixed install.pl to work with icinga.
* renamed upgrade.pl to flat2hier.pl
* fixed install option typo for --check-prerequisites in install instructions.
* encourage standalone installations rather than overlays unless installing
   from rpm or deb package.