@@ -1,4 +1,7 @@
 #!/usr/bin/perl
+
+# nagios: +epn
+
 # $Id$
 # License: OSI Artistic License
 #          http://www.opensource.org/licenses/artistic-license.php
@@ -10,7 +13,9 @@
 # insert.pl - Store performance data returned by Nagios plugins using rrdtool.
 #
 # USAGE
-# There are two standard processing configurations: batch and immediate.
+# This script is invoked by Nagios to process performance data and store it in
+# RRD files using rrdtool.  There are two standard processing configurations:
+# batch and immediate.
 #
 # Batch Mode
 # Nagios periodically invokes insert.pl.  Data are extracted from the Nagios
@@ -21,13 +26,14 @@
 # command line.
 #
 # CONFIGURATION
+# Ensure that the 'use lib ...' line points to the correct directory.
 # The nagiosgraph.conf file controls the behavior of this script.
+# See the INSTALL or README file for installation and configuration details.
 #
 # DIAGNOSTICS
 # Use the debug_insert setting in nagiosgraph.conf to control the amount of
 # logging information that will be emitted by this script.  Output will go
 # to the nagiosgraph log file.
-
 
 # The configuration file and ngshared.pm must be in this directory:
 use lib '/opt/nagiosgraph/etc';
@@ -39,22 +45,28 @@ use warnings;
 use constant MINPOLL => 30;    ## no critic (ProhibitConstantPragma)
 
 use vars qw($VERSION);
-$VERSION = '2.0.2';
+$VERSION = '2.0.3';
 
 my $errmsg = readconfig('insert');
-if ( $errmsg ne q() ) { croak $errmsg; }
+if ( $errmsg ne q() ) {
+    debug( DBCRT, $errmsg );
+    exit 1;
+}
 debug( DBDEB, 'insert.pl processing started' );
 $errmsg = checkrrddir('write');
-if ( $errmsg ne q() ) { croak $errmsg; }
-
-# Read the map file and define a subroutine that parses performance data
+if ( $errmsg ne q() ) {
+    debug( DBCRT, $errmsg );
+    exit 1;
+}
 $errmsg = getrules( $Config{mapfile} );
-if ( $errmsg ne q() ) { croak $errmsg; }
+if ( $errmsg ne q() ) {
+    debug( DBCRT, $errmsg );
+    exit 1;
+}
 
 if ( $ARGV[0] ) {
     processdata( $ARGV[0] );
-}
-elsif ( defined $Config{perfloop} && $Config{perfloop} > 0 ) {
+} elsif ( defined $Config{perfloop} && $Config{perfloop} > 0 ) {
     my $poll = ( $Config{perfloop} < MINPOLL ) ? MINPOLL : $Config{perfloop};
     debug( DBINF, 'insert.pl using poll interval of ' . $poll . ' seconds' );
     while (1) {
@@ -63,10 +75,12 @@ elsif ( defined $Config{perfloop} && $Config{perfloop} > 0 ) {
         debug( DBDEB, 'insert.pl waiting for input' );
         sleep $poll;
     }
-}
-else {
+} else {
     my @perfdata = readperfdata( $Config{perflog} );
     if (@perfdata) { processdata(@perfdata); }
 }
 
 debug( DBDEB, 'insert.pl processing complete' );
+
+exit 0;
+
