@@ -2,6 +2,7 @@ $Id$
 
 1.4.5 TBD
 
+* ensure that insert.pl works with nagios embedded perl
 * use embedded images for show/hide toggle buttons (thanks to matt perry)
 * ensure graph controls float above other elements
 * zoom when zoom rectangle drags to right or left
